docs/envoy/v1.8.0/_sources/api-v2/config/resource_monitor/injected_resource/v2alpha/injected_resource.proto.rst.txt
.. _envoy_api_file_envoy/config/resource_monitor/injected_resource/v2alpha/injected_resource.proto:

Injected resource
=================


.. _envoy_api_msg_config.resource_monitor.injected_resource.v2alpha.InjectedResourceConfig:

config.resource_monitor.injected_resource.v2alpha.InjectedResourceConfig
------------------------------------------------------------------------

`[config.resource_monitor.injected_resource.v2alpha.InjectedResourceConfig proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/resource_monitor/injected_resource/v2alpha/injected_resource.proto#L13>`_

The injected resource monitor allows injecting a synthetic resource pressure into Envoy
via a text file, which must contain a floating-point number in the range [0..1] representing
the resource pressure and be updated atomically by a symbolic link swap.
This is intended primarily for integration tests to force Envoy into an overloaded state.

.. code-block:: json

  {
    "filename": "..."
  }

.. _envoy_api_field_config.resource_monitor.injected_resource.v2alpha.InjectedResourceConfig.filename:

filename
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) 
  

